crates/daemon/tests/snapshots/cli_help__cli_help_screener_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List all existing decisions

Usage: mxr screener list

Options:
  -h, --help  Print help
