crates/daemon/tests/snapshots/cli_help__cli_help_screener_paper-trail.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Put this sender in Paper trail (kept off the desk)

Usage: mxr screener paper-trail [OPTIONS] <SENDER_EMAIL>

Arguments:
  <SENDER_EMAIL>

Options:
      --label <LABEL>
  -h, --help           Print help
