crates/daemon/tests/snapshots/cli_help__cli_help_search.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Search messages

Usage: mxr search [OPTIONS] [QUERY]

Arguments:
  [QUERY]

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
      --limit <LIMIT>      [default: 50]
      --mode <MODE>        [possible values: lexical, hybrid, semantic]
      --sort <SORT>        [possible values: date, relevance]
      --explain
  -h, --help               Print help
