crates/daemon/tests/snapshots/cli_help__cli_help_semantic_disable.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Disable semantic search

Usage: mxr semantic disable

Options:
  -h, --help  Print help
