crates/daemon/tests/snapshots/cli_help__cli_help_semantic_enable.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Enable semantic search using the active profile

Usage: mxr semantic enable

Options:
  -h, --help  Print help
