crates/daemon/tests/snapshots/cli_help__cli_help_semantic_profile.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
Manage semantic profiles

Usage: mxr semantic profile [COMMAND]

Commands:
  list     List known semantic profiles
  install  Install a semantic profile without switching to it
  use      Switch to a semantic profile and rebuild its index
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
