crates/daemon/tests/snapshots/cli_help__cli_help_semantic_profile_install.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Install a semantic profile without switching to it

Usage: mxr semantic profile install <PROFILE>

Arguments:
  <PROFILE>  [possible values: bge-small-en-v1.5, multilingual-e5-small, bge-m3]

Options:
  -h, --help  Print help
