crates/daemon/tests/snapshots/cli_help__cli_help_semantic_profile_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List known semantic profiles

Usage: mxr semantic profile list

Options:
  -h, --help  Print help
