crates/daemon/tests/snapshots/cli_help__cli_help_semantic_reindex.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Reindex the active semantic profile

Usage: mxr semantic reindex [OPTIONS]

Options:
      --force  Re-embed every message, including ones whose stored vectors already look current. Use this to recover a corrupt or half-migrated index
  -h, --help   Print help
